# algo-farm

./: .gitignore  AGENTS.md  AGENTS_AND_SKILLS.md  API_SPEC.md  BACKLOG.md  Mission.md  SCHEMA.md  TESTING_STRATEGY.md  copilot-instructions.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: README.md  (+4 more)
engine/: .gitignore  README.md  download.py  pyproject.toml  requirements.txt  run.py  test_pattern_impact.py
engine/scripts/: download_bulk.py  download_mag7_intraday.py
engine/src/: metrics.py  models.py  utils.py
engine/src/backtest/: runner.py  strategy.py
engine/src/data/: __init__.py  downloader.py  instruments.py
engine/src/optimization/: bayesian.py  genetic.py  grid_search.py
engine/src/robustness/: __init__.py  monte_carlo.py  oos.py  permutation.py  scorer.py  sensitivity.py  walk_forward.py
engine/src/storage/: db.py
engine/strategies/designs/: asian_range_breakout_eu_open_design.md  bollinger_breakout_volume_spike_design_v0.md  gold_session_momentum_h1_design.md  ichimoku_h4_tk_cross_btc_long_design.md  ichimoku_supertrend_precious_metals_d1_design.md  ichimoku_supertrend_precious_metals_d1_long_design.md  ichimoku_supertrend_silver_long_design.md  mag7_d1_bias_pullback_h1_design.md  overnight_mean_reversion_us_indices_design.md
engine/strategies/draft/: ema_crossover_rsi_filter.json  ema_crossover_rsi_filter_iter1.json  ema_crossover_rsi_filter_iter2.json  ema_crossover_rsi_filter_iter3.json  rsi_reversal_adx.json  supertrend_rsi_v2.json  supertrend_rsi_v3.json  supertrend_rsi_v4.json
engine/tests/: conftest.py
(+157 files in other folders)
